syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

message GarageCoordinate {
    float latitude = 1;
    float longitude = 2;
}

message Garage {
    string id = 1;
    string name = 2;
    GarageCoordinate coordinate = 3;
}

message GarageList {
    repeated Garage list = 1;
}

message GarageListByMember {
    map<string, GarageList> list = 1;
}

message GarageMemberId {
    string member_id = 1;
}

message GarageAndMemberId {
    string member_id = 1;
    Garage garage = 2;
}

service Garages {
    rpc List(GarageMemberId) returns (GarageList) {}
    rpc Add(GarageAndMemberId) returns (google.protobuf.Empty) {}
}