syntax = "proto3";

import "google/protobuf/empty.proto";
package proto;

enum MemberGender {
    UNDEGINED = 0;
    MALE = 1;
    FEMALE = 2;
}

message Member {
    string id = 1;
    string name = 2;
    string password = 3;
    MemberGender gender = 4;
}

message MemberList {
    repeated Member list = 1;
}

service Members {
    rpc Register(Member) returns (google.protobuf.Empty) {}
    rpc List(google.protobuf.Empty) returns (MemberList) {}
}